deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web-app
spec:
  replicas: 5
  selector:
    matchLabels:
      app: django-web-app
  template:
    metadata:
      labels:
        app: django-web-app
    spec:
      containers:
        - name: django-web-app
          image: sandhyavisakha/django-web-app-v1.0
          ports:
            - containerPort: 8000
