ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: django-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: 192.168.58.2
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: django-web-app-service
                port:
                  number: 80
